# LinSysSolver

./: .gitignore  Makefile  README.md  equation.py  fraction.py  pyproject.toml  pytest.ini  requirements.txt  system_eq.py  test.py  test_equation.py  test_fraction.py  test_system_eq.py
csv_files/: es11.csv  es12.csv  es2.csv  es4.csv  es5.csv  es6.csv  es7.csv  es8.csv  es9.csv  row_all_zero.csv  single_eq_system.csv  single_eq_system2.csv  system.csv  system_to_minimize2.csv  system_to_sort.csv  test2.csv  test3.csv  unpaired1.csv
docs/: explanation.md  reference.md  tutorial-how-to.md
src/LinSysSolver/: equation.py  main.py  system_eq.py
tests/: test_equation.py  test_fraction.py  test_system_eq.py
tests/csv_files/: es1.csv  es10.csv  es13.csv  es14.csv  es15.csv  es3.csv  system_to_minimize1.csv  system_to_sort.csv  system_to_zeroes.csv  test1.csv  test4.csv  test5.csv  unpaired2.csv  unpaired3.csv  unused_unknowns.csv
